jellyfish-cli/com.ngc.seaside.jellyfish/src/test/resources/valid-project/src/main/sd/com/ngc/seaside/common/datatype/SystemTrack.sd
package com.ngc.seaside.common.datatype

//import com.ngc.seaside.systemdescriptor.common.StateVector
//import com.ngc.seaside.systemdescriptor.common.Covariance

data SystemTrack {
	int identifier
	//StateVector state
	//Covariance cov
}