jellyfish-cli/com.ngc.seaside.jellyfish/src/test/resources/invalid-grammar-project/src/main/sd/com/ngc/seaside/common/datatype/StateVector.sd
package com.ngc.seaside.common.datatype

//import com.ngc.seaside.systemdescriptor.common.GPSTime
//import com.ngc.seaside.systemdescriptor.common.Vector3

data StateVector {
	//GPSTime validityTime
	//Vector3 ecefPosition
	//Vector3 ecefVelocity
	//Vector3 ecefAcc
}